BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/Customer_Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>To maintain record of Purchase Orders received</description>
    <label>Customer Purchase Order</label>
    <nameField>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>