BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Name</description>
    <inlineHelpText>Customer</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>Customer_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>