BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/fields/Despatch_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Despatch_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Despatch Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>Customer_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>