BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <description>This status indicates whether the Purchase Order has been sent to Unibis</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>