BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The Opportunity against which the Purchase order is received</description>
    <inlineHelpText>The Opportunity against which this PO is received</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Purchase Orders</relationshipLabel>
    <relationshipName>Customer_Purchase_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>