BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/recordTypes/Customer_PO.recordType-meta.xml
<RecordType>
    <fullName>Customer_PO</fullName>
    <active>true</active>
    <description>Purchase Order received from Customer</description>
    <label>Customer PO</label>
</RecordType>