BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/validationRules/Approved_Quote_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Quote_Missing</fullName>
    <active>true</active>
    <description>If the opportunity has a synced quote but it is not approved then PO creation should not be possible</description>
    <errorConditionFormula>AND
(
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
OR
(
  ISNULL(Opportunity__r.SyncedQuote.Id),
  NOT(ISPICKVAL(Opportunity__r.SyncedQuote.Status, &apos;PO Received &amp; Checked&apos;))
))</errorConditionFormula>
    <errorMessage>Synced Quote missing or Synced Quote not in PO Received Status</errorMessage>
</ValidationRule>