BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/listViews/Kalgoorlie_Customer_PO_s.listView-meta.xml
<ListView>
    <fullName>Kalgoorlie_Customer_PO_s</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Graham Kennedy,Darren Smith,John Kemenade,Hareesh Gadkar</value>
    </filters>
    <label>Kalgoorlie Customer PO&apos;s</label>
    <sharedTo>
        <role>Account_Manager_Darren_Smith</role>
        <role>RSM_Graham_Kennedy</role>
    </sharedTo>
</ListView>