BradkenProduction/force-app/main/default/objects/Customer_Purchase_Order__c/listViews/Patrick_s_order.listView-meta.xml
<ListView>
    <fullName>Patrick_s_order</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>IntegrationStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Despatch_Warehouse__c</columns>
    <filterScope>Mine</filterScope>
    <label>Patrick´s order</label>
</ListView>